Better default config.

--- a/options.html
+++ b/options.html
@@ -25,13 +25,14 @@
       <h1>PigQuery</h1>
     </div>
 
-    <textarea id="payload" spellcheck="false" placeholder='{"insertOptions": [], "clickOptions": []}'></textarea>
+    <textarea id="payload" spellcheck="false" placeholder='Enter configuration'></textarea>
 
     <div class="row">
       <button id="save" type="button">Save</button>
       <span id="status" class="muted"></span>
     </div>
 
+    <script src="defaults.js"></script>
     <script src="options.js"></script>
   </body>
 </html>
