Fix tiny command character bug.

--- a/popup.html
+++ b/popup.html
@@ -45,7 +45,7 @@
       }
       .shortcut-keys {
         color: #89d185;
-        font-family: ui-monospace, SFMono-Regular, Menlo, monospace;
+        font-family: -apple-system,BlinkMacSystemFont,"Helvetica Neue",Arial,sans-serif;
         font-size: 12px;
         white-space: nowrap;
       }
@@ -68,7 +68,7 @@
   </head>
   <body>
     <div class="header">
-      <img src="icon.svg" alt="PigQuery Logo">
+      <img src="icon.svg" alt="PigQuery Logo" />
       <h1>Keyboard Shortcuts</h1>
     </div>
 
