New keyboard shortcuts.

--- a/popup.html
+++ b/popup.html
@@ -75,11 +75,11 @@
     <div class="shortcuts">
       <div class="shortcut">
         <span class="shortcut-name">Insert</span>
-        <span class="shortcut-keys">Ctrl+⌘+I</span>
+        <span class="shortcut-keys">⌘+Shift+I</span>
       </div>
       <div class="shortcut">
         <span class="shortcut-name">Share</span>
-        <span class="shortcut-keys">Ctrl+⌘+S</span>
+        <span class="shortcut-keys">⌘+Shift+S</span>
       </div>
       <div class="shortcut">
         <span class="shortcut-name">Open site</span>
