Translate to German.

--- a/options.html
+++ b/options.html
@@ -25,10 +25,10 @@
       <h1>PigQuery</h1>
     </div>
 
-    <textarea id="payload" spellcheck="false" placeholder='Enter configuration'></textarea>
+    <textarea id="payload" spellcheck="false" placeholder="Enter configuration" data-i18n-placeholder="optionsPlaceholder"></textarea>
 
     <div class="row">
-      <button id="save" type="button">Save</button>
+      <button id="save" type="button" data-i18n="optionsSave">Save</button>
       <span id="status" class="muted"></span>
     </div>
 
