--- a/popup.html
+++ b/popup.html
@@ -69,30 +69,30 @@
   <body>
     <div class="header">
       <img src="icon.svg" alt="PigQuery Logo" />
-      <h1>Keyboard Shortcuts</h1>
+      <h1 data-i18n="keyboardShortcuts">Keyboard Shortcuts</h1>
     </div>
 
     <div class="shortcuts">
       <div class="shortcut">
-        <span class="shortcut-name">Insert</span>
+        <span class="shortcut-name" data-i18n="shortcutInsert">Insert</span>
         <span class="shortcut-keys">⌘+Shift+I</span>
       </div>
       <div class="shortcut">
-        <span class="shortcut-name">Share</span>
+        <span class="shortcut-name" data-i18n="shortcutShare">Share</span>
         <span class="shortcut-keys">⌘+Shift+S</span>
       </div>
       <div class="shortcut">
-        <span class="shortcut-name">Open site</span>
+        <span class="shortcut-name" data-i18n="shortcutOpenSite">Open site</span>
         <span class="shortcut-keys">Alt+Click</span>
       </div>
       <div class="shortcut">
-        <span class="shortcut-name">Copy cell</span>
+        <span class="shortcut-name" data-i18n="shortcutCopyCell">Copy cell</span>
         <span class="shortcut-keys">Alt+⌘+Click</span>
       </div>
     </div>
 
     <div class="footer">
-      <a href="#" id="options-link">Extension Options</a>
+      <a href="#" id="options-link" data-i18n="extensionOptions">Extension Options</a>
     </div>
 
     <script src="popup.js"></script>
