Improve error strings. Make i18n common.

--- a/popup.html
+++ b/popup.html
@@ -95,6 +95,7 @@
       <a href="#" id="options-link" data-i18n="extensionOptions">Extension Options</a>
     </div>
 
+    <script src="common.js"></script>
     <script src="popup.js"></script>
   </body>
 </html>
