--- a/options.html
+++ b/options.html
@@ -32,7 +32,7 @@
       <span id="status" class="muted"></span>
     </div>
 
-    <script src="defaults.js"></script>
+    <script src="common.js"></script>
     <script src="options.js"></script>
   </body>
 </html>
