Use Cmd-A for share.

--- a/popup.html
+++ b/popup.html
@@ -79,7 +79,7 @@
       </div>
       <div class="shortcut">
         <span class="shortcut-name" data-i18n="shortcutShare">Share</span>
-        <span class="shortcut-keys">⌘+Shift+S</span>
+        <span class="shortcut-keys">⌘+A</span>
       </div>
       <div class="shortcut">
         <span class="shortcut-name" data-i18n="shortcutOpenSite">Open site</span>
