--- a/options.html
+++ b/options.html
@@ -32,6 +32,7 @@
       <span id="status" class="muted"></span>
     </div>
 
+    <script src="js-yaml.min.js"></script>
     <script src="i18n.js"></script>
     <script src="common.js"></script>
     <script src="options.js"></script>
