--- a/options.html
+++ b/options.html
@@ -65,7 +65,7 @@
 
     <script src="js-yaml.min.js"></script>
     <script src="i18n.js"></script>
-    <script src="common.js"></script>
+    <script src="config.js"></script>
     <script src="options.js"></script>
   </body>
 </html>
