--- a/options.html
+++ b/options.html
@@ -32,6 +32,7 @@
       .source-actions { display: flex; gap: 6px; }
       .source-actions button { padding: 4px 8px; font-size: 12px; }
       .source-card textarea { margin-top: 8px; }
+      .source-error { color: #f48771; font-size: 12px; margin-top: 4px; }
       .empty-state { color: #888; font-style: italic; padding-top: 16px; text-align: center; }
       .example-textarea { font-size: 12px; height: auto; min-height: auto; overflow: hidden; resize: none; }
     </style>
