Indicate in popup whether there are refresh errors.

--- a/popup.html
+++ b/popup.html
@@ -72,6 +72,10 @@
         color: #888;
         text-align: center;
       }
+      .status-error {
+        color: #f48771;
+        margin-top: 4px;
+      }
     </style>
   </head>
   <body>
