Allow refreshing from the popup.

--- a/popup.html
+++ b/popup.html
@@ -76,6 +76,25 @@
         color: #f48771;
         margin-top: 4px;
       }
+      .status-row {
+        margin-top: 8px;
+      }
+      .refresh-btn {
+        padding: 2px 8px;
+        background: #3c3c3c;
+        color: #e0e0e0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        font-size: 11px;
+      }
+      .refresh-btn:hover {
+        background: #505050;
+      }
+      .refresh-btn:disabled {
+        opacity: 0.5;
+        cursor: not-allowed;
+      }
     </style>
   </head>
   <body>
