Organize repo files

--- a/src/options.html
+++ b/src/options.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     <div class="header">
-      <img src="icon.svg" alt="PigQuery Logo">
+      <img src="../icons/icon.svg" alt="PigQuery Logo">
       <h1>PigQuery</h1>
     </div>
 
@@ -64,7 +64,7 @@
       <span id="localStatus" class="muted"></span>
     </div>
 
-    <script src="js-yaml.min.js"></script>
+    <script src="../lib/js-yaml.min.js"></script>
     <script src="i18n.js"></script>
     <script src="config.js"></script>
     <script src="options.js"></script>
