--- a/src/popup.html
+++ b/src/popup.html
@@ -98,7 +98,7 @@
   </head>
   <body>
     <div class="header">
-      <img src="icon.svg" alt="PigQuery Logo" />
+      <img src="../icons/icon.svg" alt="PigQuery Logo" />
       <h1 data-i18n="keyboardShortcuts">Keyboard Shortcuts</h1>
     </div>
 
@@ -127,7 +127,7 @@
       <a href="#" id="options-link" data-i18n="extensionOptions">Extension Options</a>
     </div>
 
-    <script src="js-yaml.min.js"></script>
+    <script src="../lib/js-yaml.min.js"></script>
     <script src="i18n.js"></script>
     <script src="config.js"></script>
     <script src="popup.js"></script>
