--- a/test/test.html
+++ b/test/test.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Pig Query Unit Test</title>
-  <link rel="icon" type="image/svg+xml" href="icon.svg">
+  <link rel="icon" type="image/svg+xml" href="../icons/icon.svg">
   <style>
     body { font-family: monospace; padding: 20px; background: #1e1e1e; color: #d4d4d4; }
     .pass { color: #4ec9b0; }
@@ -14,7 +14,7 @@
   <h1>Pig Query Unit Test</h1>
   <div id="results"></div>
 
-  <script src="search.js"></script>
+  <script src="../src/search.js"></script>
   <script>
     const results = document.getElementById('results');
     let passed = 0, failed = 0;
