Add report bug link.

--- a/src/popup.html
+++ b/src/popup.html
@@ -63,6 +63,10 @@
         color: #1177bb;
         text-decoration: underline;
       }
+      .footer .separator {
+        color: #666;
+        margin: 0 8px;
+      }
       .status {
         margin-top: 16px;
         padding-top: 12px;
@@ -125,6 +129,8 @@
 
     <div class="footer">
       <a href="#" id="options-link" data-i18n="extensionOptions">Extension Options</a>
+      <span class="separator">·</span>
+      <a href="https://github.com/nicholasdower/pigquery/issues/new/choose" target="_blank" data-i18n="reportBug">Report a Bug</a>
     </div>
 
     <script src="../lib/js-yaml.min.js"></script>
