--- a/src/options.html
+++ b/src/options.html
@@ -28,10 +28,10 @@
       .source-card { margin-top: 24px; }
       .source-url { font-family: ui-monospace, SFMono-Regular, Menlo, monospace; font-size: 12px; color: #6cb6ff; word-break: break-all; }
       .source-meta { font-size: 12px; color: #888; margin-top: 2px; }
+      .source-meta.error { color: #f48771; }
       .source-card textarea { margin-top: 8px; }
       .source-actions { display: flex; gap: 6px; align-items: center; margin-top: 8px; }
       .source-actions button { padding: 4px 8px; font-size: 12px; }
-      .source-status { font-size: 12px; margin-left: 4px; }
       .empty-state { color: #888; font-style: italic; padding-top: 16px; text-align: center; }
       .example-textarea { font-size: 12px; height: auto; min-height: auto; overflow: hidden; resize: none; }
     </style>
