--- a/src/options.html
+++ b/src/options.html
@@ -26,11 +26,13 @@
       h1 { color: #e0e0e0; margin: 0; }
       h2 { color: #e0e0e0; margin: 24px 0 0 0; font-size: 16px; }
       .source-card { margin-top: 24px; }
+      .source-header { display: flex; justify-content: space-between; align-items: center; gap: 12px; }
+      .source-info { flex: 1; min-width: 0; }
       .source-url { font-family: ui-monospace, SFMono-Regular, Menlo, monospace; font-size: 12px; color: #6cb6ff; word-break: break-all; }
       .source-meta { font-size: 12px; color: #888; margin-top: 2px; }
       .source-meta.error { color: #f48771; }
       .source-card textarea { margin-top: 8px; }
-      .source-actions { display: flex; gap: 6px; align-items: center; margin-top: 8px; }
+      .source-actions { display: flex; gap: 6px; align-items: center; flex-shrink: 0; }
       .source-actions button { padding: 4px 8px; font-size: 12px; }
       .empty-state { color: #888; font-style: italic; padding-top: 16px; text-align: center; }
       .example-textarea { font-size: 12px; height: auto; min-height: auto; overflow: hidden; resize: none; }
