--- a/src/options.html
+++ b/src/options.html
@@ -13,10 +13,14 @@
       .row { display: flex; gap: 8px; align-items: center; margin-top: 10px; flex-wrap: wrap; }
       button { padding: 6px 10px; background: #0e639c; color: #fff; border: none; border-radius: 4px; cursor: pointer; }
       button:hover { background: #1177bb; }
+      button:disabled { opacity: 0.5; cursor: not-allowed; }
+      button:disabled:hover { background: #0e639c; }
       button.danger { background: #a31515; }
       button.danger:hover { background: #c41818; }
+      button.danger:disabled:hover { background: #a31515; }
       button.secondary { background: #3c3c3c; }
       button.secondary:hover { background: #505050; }
+      button.secondary:disabled:hover { background: #3c3c3c; }
       .status { font-size: 12px; margin-top: 4px; }
       .error { color: #f48771; }
       .ok { color: #89d185; }
