--- a/src/options.html
+++ b/src/options.html
@@ -32,7 +32,7 @@
       .source-card { margin-top: 24px; }
       .source-header { display: flex; justify-content: space-between; align-items: center; gap: 12px; }
       .source-info { flex: 1; min-width: 0; }
-      .source-url { font-family: ui-monospace, SFMono-Regular, Menlo, monospace; font-size: 12px; color: #6cb6ff; word-break: break-all; }
+      .source-url { font-family: ui-monospace, SFMono-Regular, Menlo, monospace; font-size: 12px; color: #6cb6ff; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
       .source-meta { font-size: 12px; color: #888; margin-top: 2px; }
       .source-meta.error { color: #f48771; }
       .source-card textarea { margin-top: 8px; }
