--- a/src/popup.html
+++ b/src/popup.html
@@ -26,6 +26,12 @@
         margin: 0;
         color: #e0e0e0;
       }
+      h2 {
+        font-size: 13px;
+        font-weight: 500;
+        margin: 0 0 8px 0;
+        color: #999;
+      }
       .shortcuts {
         display: flex;
         flex-direction: column;
@@ -103,9 +109,10 @@
   <body>
     <div class="header">
       <img src="../icons/icon.svg" alt="PigQuery Logo" />
-      <h1 data-i18n="keyboardShortcuts">Keyboard Shortcuts</h1>
+      <h1>PigQuery</h1>
     </div>
 
+    <h2 data-i18n="keyboardShortcuts">Keyboard Shortcuts</h2>
     <div class="shortcuts">
       <div class="shortcut">
         <span class="shortcut-name" data-i18n="shortcutInsert">Insert</span>
