Update popup. Move some elements into html. Fix double load bug.

--- a/src/popup.html
+++ b/src/popup.html
@@ -132,7 +132,13 @@
       </div>
     </div>
 
-    <div class="status" id="status"></div>
+    <div class="status" id="status">
+      <span id="status-text"></span>
+      <div class="status-error" id="status-error"></div>
+      <div class="status-row">
+        <button class="refresh-btn" id="refresh-btn"></button>
+      </div>
+    </div>
 
     <div class="footer">
       <a href="#" id="options-link" data-i18n="extensionOptions">Extension Options</a>
