--- a/src/popup.html
+++ b/src/popup.html
@@ -116,11 +116,11 @@
     <div class="shortcuts">
       <div class="shortcut">
         <span class="shortcut-name" data-i18n="shortcutInsert">Insert</span>
-        <span class="shortcut-keys">⌘+Shift+I</span>
+        <span class="shortcut-keys">Ctrl+Shift+Y</span>
       </div>
       <div class="shortcut">
         <span class="shortcut-name" data-i18n="shortcutShare">Share</span>
-        <span class="shortcut-keys">⌘+A</span>
+        <span class="shortcut-keys" id="shortcut-share"></span>
       </div>
       <div class="shortcut">
         <span class="shortcut-name" data-i18n="shortcutOpenSite">Open site</span>
@@ -128,7 +128,7 @@
       </div>
       <div class="shortcut">
         <span class="shortcut-name" data-i18n="shortcutCopyCell">Copy cell</span>
-        <span class="shortcut-keys">Alt+⌘+Click</span>
+        <span class="shortcut-keys" id="shortcut-copy-cell"></span>
       </div>
     </div>
 
