Improve operation promise.

--- a/src/options.html
+++ b/src/options.html
@@ -43,9 +43,7 @@
       .example-textarea { font-size: 12px; height: auto; min-height: auto; overflow: hidden; resize: none; }
       .row input[type="text"] { flex: 1; margin-top: 0; }
       .refresh-row { margin-top: 24px; }
-      .shortcut-row { display: flex; align-items: center; gap: 12px; margin-top: 24px; }
-      .shortcut-label { font-size: 13px; white-space: nowrap; }
-      .shortcut-btn { flex: 1; max-width: 200px; padding: 6px 12px; background: #2d2d2d; color: #e0e0e0; border: 1px solid #444; border-radius: 4px; font-family: ui-monospace, SFMono-Regular, Menlo, monospace; font-size: 13px; text-align: center; cursor: pointer; }
+      .shortcut-btn { max-width: 200px; padding: 6px 12px; background: #2d2d2d; color: #e0e0e0; border: 1px solid #444; border-radius: 4px; font-family: ui-monospace, SFMono-Regular, Menlo, monospace; font-size: 13px; text-align: center; cursor: pointer; }
       .shortcut-btn:hover { background: #383838; border-color: #555; }
       .shortcut-btn:disabled { opacity: 0.5; cursor: not-allowed; }
       .shortcut-btn:disabled:hover { background: #2d2d2d; border-color: #444; }
@@ -84,8 +82,8 @@
     </div>
 
     <!-- Keyboard Shortcuts Section -->
-    <div class="shortcut-row">
-      <span class="shortcut-label" data-i18n="shortcutInsertSnippet">Insert snippet</span>
+    <h2 data-i18n="shortcutInsertSnippet">Insert Snippet Shortcut</h2>
+    <div class="row">
       <button type="button" class="shortcut-btn" id="shortcut-insertSnippet"></button>
       <button id="resetShortcuts" type="button" class="secondary" data-i18n="optionsResetShortcut">Reset</button>
       <span id="shortcutsStatus" class="status muted"></span>
