Update shortcut button style. Click to cancel.

--- a/src/options.html
+++ b/src/options.html
@@ -43,11 +43,10 @@
       .example-textarea { font-size: 12px; height: auto; min-height: auto; overflow: hidden; resize: none; }
       .row input[type="text"] { flex: 1; margin-top: 0; }
       .refresh-row { margin-top: 24px; }
-      .shortcut-btn { max-width: 200px; padding: 6px 12px; background: #2d2d2d; color: #e0e0e0; border: 1px solid #444; border-radius: 4px; font-family: ui-monospace, SFMono-Regular, Menlo, monospace; font-size: 13px; text-align: center; cursor: pointer; }
+      .shortcut-btn { min-width: 200px; padding: 6px 12px; background: #2d2d2d; color: #e0e0e0; border: 1px solid #444; border-radius: 4px; font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial, sans-serif; font-size: 13px; text-align: center; cursor: pointer; }
       .shortcut-btn:hover { background: #383838; border-color: #555; }
       .shortcut-btn:disabled { opacity: 0.5; cursor: not-allowed; }
       .shortcut-btn:disabled:hover { background: #2d2d2d; border-color: #444; }
-      .shortcut-btn.recording { background: #0e639c; border-color: #1177bb; color: #fff; }
     </style>
   </head>
   <body>
