Update shortcut in popup. Show Win on Windows.

--- a/src/popup.html
+++ b/src/popup.html
@@ -116,7 +116,7 @@
     <div class="shortcuts">
       <div class="shortcut">
         <span class="shortcut-name" data-i18n="shortcutInsert">Insert</span>
-        <span class="shortcut-keys">Ctrl+Shift+Y</span>
+        <span class="shortcut-keys" id="shortcut-insert"></span>
       </div>
       <div class="shortcut">
         <span class="shortcut-name" data-i18n="shortcutShare">Share</span>
