--- a/src/options.html
+++ b/src/options.html
@@ -5,9 +5,9 @@
     <title>PigQuery</title>
     <style>
       body { font: 14px/1.4 system-ui, sans-serif; margin: 0 16px; padding-bottom: 24px; background: #1e1e1e; color: #e0e0e0; }
-      textarea { width: 100%; min-height: 300px; font-family: ui-monospace, SFMono-Regular, Menlo, monospace; background: #2d2d2d; color: #e0e0e0; border: 1px solid #444; padding: 8px; box-sizing: border-box; resize: vertical; margin-top: 12px; }
+      textarea { width: 100%; height: 180px; min-height: 180px; font-family: ui-monospace, SFMono-Regular, Menlo, monospace; background: #2d2d2d; color: #e0e0e0; border: 1px solid #444; padding: 8px; box-sizing: border-box; resize: vertical; margin-top: 12px; }
       textarea::placeholder { color: #888; }
-      textarea[readonly] { background: #252525; color: #aaa; min-height: 150px; }
+      textarea[readonly] { background: #252525; color: #aaa; height: 180px; min-height: 180px; max-height: 180px; overflow-y: auto; }
       input[type="text"] { width: 100%; padding: 6px 10px; background: #2d2d2d; color: #e0e0e0; border: 1px solid #444; border-radius: 4px; font-size: 14px; box-sizing: border-box; margin-top: 12px; }
       input[type="text"]::placeholder { color: #888; }
       .row { display: flex; gap: 8px; align-items: center; margin-top: 10px; flex-wrap: wrap; }
@@ -21,7 +21,7 @@
       button.secondary { background: #3c3c3c; }
       button.secondary:hover { background: #505050; }
       button.secondary:disabled:hover { background: #3c3c3c; }
-      .status { font-size: 12px; margin-top: 4px; min-height: 1.4em; display: block; }
+      .status { font-size: 12px; margin-top: 6px; min-height: 1.4em; display: block; }
       .row .status { margin-top: 0; display: inline; min-height: auto; }
       .error { color: #f48771; }
       .ok { color: #89d185; }
@@ -40,9 +40,9 @@
       .source-actions { display: flex; gap: 6px; align-items: center; flex-shrink: 0; }
       .source-actions button { padding: 4px 8px; font-size: 12px; }
       .empty-state { color: #888; font-style: italic; padding-top: 16px; text-align: center; }
-      .example-textarea { font-size: 12px; height: auto; min-height: auto; overflow: hidden; resize: none; }
+      .example-textarea { font-size: 12px; resize: none; }
       .row input[type="text"] { flex: 1; margin-top: 0; }
-      .refresh-row { margin-top: 24px; }
+      .refresh-row { margin-top: 6px; }
       .shortcut-btn { min-width: 200px; padding: 6px 12px; background: #2d2d2d; color: #e0e0e0; border: 1px solid #444; border-radius: 4px; font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial, sans-serif; font-size: 13px; text-align: center; cursor: pointer; }
       .shortcut-btn:hover { background: #383838; border-color: #555; }
       .shortcut-btn:disabled { opacity: 0.5; cursor: not-allowed; }
