--- a/src/options.html
+++ b/src/options.html
@@ -53,6 +53,9 @@
       .shortcut-btn:disabled { opacity: 0.5; cursor: not-allowed; }
       .shortcut-btn:disabled:hover { background: #2d2d2d; border-color: #444; }
       .header .shortcuts button.secondary { padding: 6px 12px; border: 1px solid #444; font-size: 13px; }
+      .footer { margin-top: 32px; padding-top: 16px; border-top: 1px solid #333; display: flex; justify-content: center; gap: 24px; font-size: 13px; }
+      .footer a { color: #6cb6ff; text-decoration: none; }
+      .footer a:hover { text-decoration: underline; }
     </style>
   </head>
   <body>
@@ -93,6 +96,13 @@
           <span id="localStatus" class="muted"></span>
         </div>
       </div>
+    </div>
+
+    <div class="footer">
+      <a href="https://console.cloud.google.com/bigquery" target="_blank" data-i18n="footerBigQuery">BigQuery</a>
+      <a href="https://chromewebstore.google.com/detail/pigquery/ifdkafnegoadieggghgcgcclnppeaemi" target="_blank" data-i18n="footerStore">Store</a>
+      <a href="https://github.com/nicholasdower/pigquery" target="_blank" data-i18n="footerSource">Source</a>
+      <a href="https://github.com/nicholasdower/pigquery/issues/new" target="_blank" data-i18n="footerBug">Bug</a>
     </div>
 
     <script src="../lib/js-yaml.min.js"></script>
